--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>PRODUCTOS</title>
+    <title>MIS PRODUCTOS</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
     <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
@@ -230,6 +230,11 @@
                     {% endfor %}
                 </select>
             </form>
+        </div>
+        <div>
+            {% if productos|length < 1 %}
+                <p>No hay productos que mostrar</p>
+            {% endif %}
         </div>
         <div class="products-grid">
             {% for producto in productos %}
