--- a/EcoWEB/Apps/Productos/templates/edit_product.html
+++ b/EcoWEB/Apps/Productos/templates/edit_product.html
@@ -55,8 +55,10 @@
 
   .product_form h2 {
       text-align: center;
+      font-size: 2.5em;
       margin-bottom: 20px;
       color: #023b48;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
   }
 
   .btn {
