--- a/EcoWEB/Apps/Productos/templates/detalle_producto.html
+++ b/EcoWEB/Apps/Productos/templates/detalle_producto.html
@@ -50,19 +50,26 @@
             margin-top: 12px;
         }
 
-        .btn-back {
-            margin-top: 20px;
-            padding: 10px 20px;
+        .btn {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
             background-color: #3d8a4f;
             color: #ffffff;
-            border: none;
-            border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
-        .btn-back:hover {
+        .btn:hover {
             background-color: #2c6b3a;
+        }
+
+        .button_group {
+            display: flex;
+            justify-content: center;
         }
 
         .rate {
@@ -106,6 +113,8 @@
                         <input type="radio" id="star{{ i }}-{{ producto.id }}" name="rate{{ producto.id }}" value="{{ i }}" {% if producto.valoracion == i %}checked{% endif %} disabled />
                         <label for="star{{ i }}-{{ producto.id }}" title="{{ i }} stars">★</label>
                     {% endfor %}
+                {% else %}
+                    <p>Este producto no tiene valoraciones</p>
                 {% endif %}
 
             </div>
@@ -115,7 +124,11 @@
             <p>Unidades disponibles: {{ producto.stock }}</p>
             <p>Categoría: {{ producto.categoria }}</p>                                         
             
-            <a href="{% url 'list_products' %}" class="btn-back">Volver</a>
+            <div class="button_group">
+                <a href="{% url 'list_products' %}" class="btn">Volver</a>
+                <a href="{% url 'add_carrito' producto.id %}" class="btn" alt="Añadir al carrito">Añadir a la cesta</a>
+            </div>
+            
         </div>
     </div>
     <section class="container-fluid footer_section">
