--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -89,40 +89,52 @@
             margin-top: 12px;
         }
 
+        h2 {
+            font-size: 2.5em;
+            color: #3d8a4f;
+            margin-bottom: 20px;
+            /* font-family: 'Poppins', sans-serif; */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
 
         .btn {
-        width: calc(100% - 22px); 
-        padding: 10px;
-        margin: 20px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-sizing: border-box; 
-        background-color: #3d8a4f;
-        color: #ffffff;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         .btn-cancel {
-        width: calc(100% - 22px); 
-        padding: 10px;
-        margin: 20px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-sizing: border-box; 
-        background-color: #8a3d3d;
-        color: #ffffff;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #8a3d3d;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         .btn_pass{
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        background-color: #3d6f8a;
-        color: #ffffff;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #3d6f8a;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #2c6b3a;
         }
 
         .button_group {
