--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -60,7 +60,7 @@
     }
   
     .btn-outline-success {
-      width: auto; /* Ajusta el ancho automáticamente */
+      width: auto;
     }
   
     @media (max-width: 768px) {
@@ -144,7 +144,7 @@
         <a class="nav-link" href="/productos/lista_productos">Productos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Productores</a>
+        <a class="nav-link" href="/usuarios/productores">Productores</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contacto</a>
